Fix editor edit-panel appearing off-screen if user has scrolled

--- a/editor/src/app/component/dumb/editpanel.css
+++ b/editor/src/app/component/dumb/editpanel.css
@@ -1,5 +1,5 @@
 .edit-panel {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
